# ntu-sctp-m1-capstone

./: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  streamlit.md
notebooks/: analysis(RJ).ipynb  analysis.ipynb  sgjobdata.ipynb
scripts/: dy-test.py
streamlit/: app.py  data_loader.py
streamlit/tabs/: tab_executive.py  tab_experience.py  tab_opportunity.py  tab_sectoral.py  tab_skills.py
