[project]
name = "ntusctp-sgjobdata"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "plotly",
  "streamlit",
]

[project.optional-dependencies]
analysis = [
  "matplotlib",
  "networkx",
  "seaborn",
]
pipeline = [
  "openpyxl",
  "rapidfuzz",
  "scikit-learn",
  "sentence-transformers",
  "tqdm",
]
legacy-ml = [
  "torch",
  "transformers",
]
notebooks = [
  "ipykernel",
  "ipywidgets",
  "jupyterlab",
]
